--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-aos": "^2.1.0"
+    "aos": "^3.0.0-beta.6",
+    "vue-click-outside": "^1.1.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
