--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.1.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "aos": "^3.0.0-beta.6",
     "vue-click-outside": "^1.1.0",
+    "vue-scroll-fixed-navbar": "^0.2.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
