--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "bootstrap": "^5.1.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "emailjs-com": "^3.2.0",
+    "vee-validate": "^3.4.12",
     "vue": "^2.6.11",
     "vue-click-outside": "^1.1.0",
+    "vue-recaptcha": "^1.3.0",
     "vue-scroll-fixed-navbar": "^0.2.2",
     "vuex": "^3.6.2"
   },
